--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -10,26 +10,33 @@
         android:layout_height="wrap_content"
         android:text="@string/crime_details_label"
         style="?android:listSeparatorTextViewStyle"/>
-    <Button
-        android:id="@+id/crime_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"/>
     <CheckBox
         android:id="@+id/crime_solved"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/crime_solved_lavel"/>
-    <Button
-        android:id="@+id/crime_suspect"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/crime_suspect_text"/>
-    <Button
-        android:id="@+id/crime_report"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/crime_report_text"/>
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/crime_date"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="16dp"/>
+
+        <Button
+            android:id="@+id/crime_suspect"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="16dp"
+            android:text="@string/crime_suspect_text"/>
+        <Button
+            android:id="@+id/crime_report"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="16dp"
+            android:text="@string/crime_report_text"/>
+
+    </LinearLayout>
 </LinearLayout>
